--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
 <body>
-  <h1>YOUR SITE TITLE</h1>
-  <p> Currently under construction</p>
-  <p> There will be even more words here!</p>
+  <h1>Kunal Roy</h1>
+  <p> <center> Currently under construction </center></p>
+  <p> <center> There will be even more words here!</center></p>
 </body>
 </html>
