changed index file as a test

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
 <body>
-  <h1>Kunal Roy</h1>
+  <h1><center>Kunal Roy </center></h1>
   <p> <center> Currently under construction </center></p>
   <p> <center> There will be even more words here!</center></p>
+  <p> <center> This is another test </center></p> 
 </body>
 </html>
