added some base structure for the home page

--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Kunal Roy's site</title>
-  <!-- Add some style to your site, see http://getbootstrap.com for details -->
-  <link rel="stylesheet"
-  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-</head>
-<body>
-  <h1><center>Kunal Roy </center></h1>
-  <p> <center> Currently under construction </center></p>
-  <p> <center> There will be even more words here!</center></p>
-  <p> <center> This is another test </center></p> 
-</body>
+	<head>
+		<title>Kunal Roy, Horrible Magician</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Greetings browser, I'm Kunal Roy!</h1>
+				<p> I'm an aspiring magician<em>A Touch of Evil</em>  <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:kunalroy@berkeley.edu">email</a></li>
+        		<li><a href="https://github.com/kunal365roy">github.com/kunalroy</a></li>
+			</ul>
+		</footer>
+	</body>
 </html>
