--- a/index.html
+++ b/index.html
@@ -1,30 +1,14 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
+
 <html>
 	<head>
-		<title>Kunal Roy, Horrible Magician</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<meta charset="utf-8">
+		<title> Curry Ball </title>
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Greetings browser, I'm Kunal Roy!</h1>
-				<p> I'm an aspiring magician<em>A Touch of Evil</em>  <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:kunalroy@berkeley.edu">email</a></li>
-        		<li><a href="https://github.com/kunal365roy">github.com/kunalroy</a></li>
-			</ul>
-		</footer>
+		<link rel=”stylesheet” href=”css/bootstrap.css”  type=”text/css”/>
+		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+        <script src=”js/bootstrap.js”></script>
+
 	</body>
 </html>
