--- a/index.html
+++ b/index.html
@@ -10,5 +10,20 @@
 		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
         <script src=”js/bootstrap.js”></script>
 
+        <div class="navbar">
+	     	<div class="navbar-inner">
+		       <div class="container">
+			       	<u1 class="nav">
+			       		<li class="active"><a href='#'>Home</a></li>
+			       		<li><a href="#">Projects</a></li>
+			       		<li><a href="#">Services</a></li>
+			       		<li><a href="#">Downloads</a></li>
+			       		<li><a href="#">About</a></li>
+			       		<li><a href="#">Contact</a></li>
+			       	</u1>
+		       </div>
+		    </div>
+		</div>
+
 	</body>
 </html>
