--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
         <script src=”js/bootstrap.js”></script>
 
-        <div class="navbar">
+ 
+        <div class="container">
+        <h1><a href="#">CurryBall </a></h1>
+         <div class="navbar">
 	     	<div class="navbar-inner">
 		       <div class="container">
 			       	<u1 class="nav">
