--- a/index.html
+++ b/index.html
@@ -1,35 +1,14 @@
-<!DOCTYPE html>
-
+!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title> Curry Ball </title>
-	</head>
-
-	  <div class="container">
-        <h1><a href="#">CurryBall </a></h1>
-         <div class="navbar">
-	     	<div class="navbar-inner">
-		       <div class="container">
-			       	<u1 class="nav">
-			       		<li class="active"><a href='#'>Home</a></li>
-			       		<li><a href="#">Projects</a></li>
-			       		<li><a href="#">Services</a></li>
-			       		<li><a href="#">Downloads</a></li>
-			       		<li><a href="#">About</a></li>
-			       		<li><a href="#">Contact</a></li>
-			       	</u1>
-		       </div>
-		    </div>
-		</div>
-		
-	<body>
-		<link rel=”stylesheet” href=”css/bootstrap.css”  type=”text/css”/>
-		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-        <script src=”js/bootstrap.js”></script>
-
- 
-
-
-	</body>
+  <head>
+    <title>Bootstrap 101 Template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
