changed index file to check changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div class="container">
 
-    <h1><a href="”#”">Bootstrap Site</a></h1>
+    <h1><a href="”#”"> Attempted change</a></h1>
 
     <div class="navbar">
                 <div class="navbar-inner">
