removed textdependency that doesn't exist

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset=”utf-8”> 
     <title> boot strap test</title>
-    <link rel=”stylesheet” href=”css/bootstrap.css”  type=”text/css”/>
+    <link rel=”stylesheet” href=”css/bootstrap.css”>
   </head>
 
   <body>
