--- a/index.html
+++ b/index.html
@@ -1,36 +1,28 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
   <head>
-    <meta charset=”utf-8”> 
-    <title> boot strap test</title>
-    <link rel=”stylesheet” href=”css/bootstrap.css”>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Bootstrap 101 Template</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-      <script src=”js/bootstrap.js”></script>
-      <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <h1>Hello, world!</h1>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
   </body>
-
-
-  <div class="container">
-
-    <h1><a href="”#”"> Attempted change</a></h1>
-
-    <div class="navbar">
-                <div class="navbar-inner">
-                  <div class="container">
-                    <ul class="nav">
-                      <li class="active"><a href="#">Home</a></li>
-                      <li><a href="#">Projects</a></li>
-                      <li><a href="#">Services</a></li>
-                      <li><a href="#">Downloads</a></li>
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Contact</a></li>
-                    </ul>
-                  </div>
-                </div>
-    </div>
-  </div>
 </html>
