--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h1>Fuck wid us!</h1>
         <!-- <img src="curryball_logo_v1.png" alt="Logo by Sagar Panchal" style="width:304px;height:228px;"> -->
 
-        <p> Welcome to curryball. The site is currently under construction. We hope to get up some relevant articles up here</p>
+        <p> Welcome to curryball. The site is currently under construction. We hope to get up some relevant articles up here soon</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
@@ -102,8 +102,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
   </body>
 </html>
