--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img class="img-responsive2" src="curryball_logo_v1.png" height="300" width="650 align="middle"></a>
+                <a class="navbar-brand" href="index.html"><img class="img-responsive2" src="curryball_logo_v1.png" height="300" width="650" align="middle"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
