--- a/index.html
+++ b/index.html
@@ -44,23 +44,23 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img class="img-responsive2" src="curryball_logo_v1.png" height="100" width="300" align="middle"></a>
+                <a class="navbar-brand" href="index.html"><img class="img-responsive2" src="curryball_logo_v1.png" height="100" width="100" align="left"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index.html">BASEBALL</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">BASKETBALL</a>
                     </li>
                     <li>
-                        <a href="post.html">Sample Post</a>
+                        <a href="post.html">HOCKEY</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html">FUCK DRAYMOND GREEN</a>
                     </li>
                 </ul>
             </div>
