try linking to another page in the site

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
         <div class="row">
             <div class="image-block col-sm-4" style="background: url(http://www.prepbootstrap.com/Content/images/template/ResponsiveImageTiles/city1.jpg) no-repeat center top;background-size:cover;">
-                <p> Image Info </p>
+                <p href= "www.facebook.com"> Image Info </p>
             </div>
             <div class="image-block col-sm-8" style="background: url(http://www.prepbootstrap.com/Content/images/template/ResponsiveImageTiles/city2.jpg) no-repeat center top;background-size:cover;">
                 <p> Image Info </p>
@@ -239,7 +239,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="copyright text-muted">Copyright &copy; Curryball 2016</p>
                 </div>
             </div>
         </div>
