--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img class="img-responsive2" src="curryball_logo_v1.png" height="50" width="75" align="left"></a>
+                <a class="navbar-brand" href="index.html"><img class="img-responsive2" src="berkeleyblue.png" height="45" width="150" align="left"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,14 +71,13 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
+
     <header class="intro-header" style="background-image: url('img/curryball_background.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                       <!--  <h1>Clean Blog</h1>
-                        <hr class="small">
-                        <span class="subheading">A Clean Blog Theme by Start Bootstrap</span> -->
+                      
                     </div>
                 </div>
             </div>
@@ -89,15 +88,13 @@
 
 
         <div class="container-fluid">
-        <div class="row text-center">
-            <h3 class="headermessage">Responsive Image Tiles</h3>
-        </div>
+        
         <div class="row">
-            <div class="image-block col-sm-4" style="background: url(http://www.prepbootstrap.com/Content/images/template/ResponsiveImageTiles/city1.jpg) no-repeat center top;background-size:cover;">
-                <p href= "www.facebook.com"> Image Info </p>
+            <div class="image-block col-sm-4" style="background: url(img/GiantsCloser.jpeg") no-repeat center top;background-size:cover;">
+                <p href= "https://www.facebook.com"> Does the a thing work</p>
             </div>
             <div class="image-block col-sm-8" style="background: url(http://www.prepbootstrap.com/Content/images/template/ResponsiveImageTiles/city2.jpg) no-repeat center top;background-size:cover;">
-                <p> Image Info </p>
+                <p> Giants need a new closer </p>
             </div>
             <div class="image-block col-sm-4" style="background: url(http://www.prepbootstrap.com/Content/images/template/ResponsiveImageTiles/city3.jpg) no-repeat center top;background-size:cover;">
                 <p> Image Info </p>
