added links and picstures for main page

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="image-block col-sm-4" style="background: url(img/penguinsArticle.jpeg) no-repeat center top;background-size:cover;">
                 <a href="https://medium.com/@sagarrajj/stanley-cup-finals-game-1-speed-vs-strength-343bcb011fde#.wq54x344n"> Stanley Cup Game 1 recap </a>
             </div>
-            <div class="image-block col-sm-4" style="background: url(http://www.prepbootstrap.com/Content/images/template/ResponsiveImageTiles/city4.jpg) no-repeat center top;background-size:cover;">
+            <div class="image-block col-sm-4" style="background: url(img/GusJohnson.jpeg) no-repeat center top;background-size:cover;">
                 <a href ="https://medium.com/@sagarrajj/gus-johnson-cc42b74c36e6#.jvalvo91s"> Remembering Gus Johnson </a>
             </div>
             <div class="image-block col-sm-4" style="background: url(http://www.prepbootstrap.com/Content/images/template/ResponsiveImageTiles/city5.jpg) no-repeat center top;background-size:cover;">
